# enforcer

./: Cargo.toml  Enforcer.uplan.md  build.rs  directory_structure.txt
build_helpers/: collect_naming_words.rs  collect_sarif_rules.rs  create_directory_tree.rs  create_naming_words_arrays.rs  finalize_build.rs  generate_build_constants.rs  mod.rs  set_config_paths.rs  set_sarif_rules_constant.rs
docs/: directory_structure.txt  enforcer_architecture.md  enforcer_guidelines.md  microscanner_overview.md  microscanner_parameters.md  microscanner_tool_standards.md  microscanner_why.md  uplan_product_management.tt
scripts/: acquire_cargo.sh  compile_enforcer.sh  sync_tree_sitter_configurations.sh
src/: main.rs  state.rs
src/cli/: configure_cli.rs  inputs.txt  mod.rs  set_app_logs_dir.rs  set_data_files_dir.rs  set_file_path.rs  track_cli.rs
src/cli/config/: cli_rules.sarif
src/debug/: configure_debug.rs  mod.rs  warn.rs  watch.rs  wreck.rs
src/debug/config/: debug_module_prompt.txt  debug_rules.sarif  flaw_example.txt
src/oewl/: acquire_oewl.rs  configure_oewl.rs  download_oewl.rs  mod.rs  track_oewl.rs
src/oewl/config/: oewl_rules.sarif  oewl_url.txt
src/sarif/: append_train_sarif.rs  configure_sarif.rs  get_tool_sarif_rules.rs  log_sarif_json.rs  mod.rs  reset_train_warnings.rs  set_sarif_settings.rs  track_sarif.rs
src/sarif/config/: flaw_example.txt  sarif_rules.sarif  sarif_schema.json
src/sarif/tests/: run_tests.rs  test_sarif.json  test_simple_sarif.rs
src/traintrack/: check_function_name.rs  check_function_nesting_limit.rs  check_one_function_per_file.rs  check_train_function_input.rs  check_train_function_output.rs  check_train_size_limit.rs  check_unwanted_output.txt  configure_traintrack.rs  mod.rs  notes.txt   track_traintrack.rs
src/traintrack/config/: adjective_definitions.txt  naming_words.txt  noun_definitions.txt  pair_programming_prompt.txt  traintrack.toml  traintrack_cheatsheet.md  traintrack_rules.sarif  traintrack_style_guide.md  verb_definitions.txt
src/tree/: acquire_tree_rust_cli.rs
src/tree_sitter/: README.md  add_languages_to_cargo.rs  clone_language_grammars.rs  configure_tree_sitter.rs  detect_language.rs  extract_source_code_nodes.rs  load_source_code.rs  mod.rs  parse_source_code.rs  track_tree_sitter.rs
tests/: test_sarif.json
(+3 files in other folders)
