[package]
name = "enforcer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
once_cell = "1.20"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tree-sitter = "0.20.10"
glob = "0.3.1"
lazy_static = "1.4.0"
regex = "1.10.4"
walkdir = "2.5.0"
rustc-hash = "1.1.0"
tokio = { version = "1.38.0", features = ["full"] }
libloading = "0.8"

[dev-dependencies]
rstest = "0.19.0"

[build-dependencies]
cc = "1.0.94"
phf_codegen = "0.11.2"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }   # needed in build.rs
serde_json = "1.0.117"                                   # needed in build.rs
chrono = "0.4.38"
tree-sitter = "0.20.10"                                  # needed in build.rs
flate2 = "1.0"
tar = "0.4.40"
